--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,14 @@
 <header id="header" class="navigation-bar-header light hidden-xs">
   <div class="container">
     <nav class="navigation">
-      <div class="navigation-txt visible-xs" data-toggle="dropdown">Code for Good</div>
+      <div class="navigation-txt visible-xs" data-toggle="dropdown">Python for Good</div>
       <button class="navigation-toggle visible-xs" type="button" data-toggle="dropdown">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
       <ul class="navigation-bar navigation-bar-left">
-        <li><a href="/"><strong>Code for Good</strong></a></li>
+        <li><a href="/"><strong>Python for Good</strong></a></li>
         <li><a href="/sponsors.html">Sponsoring</a></li>
         <li><a href="/projects.html" >Projects</a></li>
 <!--         <li><a href="/submit-project.html">Suggest a Project</a></li>
