--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-  <title>Code for Good - Making the world gooder</title>
-  <meta name="description" content="Code for Good - Making the world gooder">
+  <title>Python for Good - Making the world gooder</title>
+  <meta name="description" content="Python for Good - Making the world gooder">
   <meta name="keywords" content="Code, code, community, conference">
   <meta name="author" content="Erwin Kaddy">
   <meta name="google-site-verification" content="TVf8y3KknlmwYqCpBzHhkNUxWQYXgSs8Q4GcRMXH6Fg" />
