--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -16,7 +16,7 @@ layout: base
 <section class="dark center">
   <hr>
   <div class="container">
-      <p>&copy; {{ site.time | date: '%Y' }} - Code for Good</p>
+      <p>&copy; {{ site.time | date: '%Y' }} - Python for Good</p>
   </div>
 </section>
 
