--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <title>Python for Good - Making the world gooder</title>
   <meta name="description" content="Python for Good - Making the world gooder">
-  <meta name="keywords" content="Code, code, community, conference">
-  <meta name="author" content="Erwin Kaddy">
+  <meta name="keywords" content="Code, code, community, conference, python for good">
+  <meta name="author" content="Python for Good">
   <meta name="google-site-verification" content="TVf8y3KknlmwYqCpBzHhkNUxWQYXgSs8Q4GcRMXH6Fg" />
   <link rel="shortcut icon" href="assets/img/favicon.png">
   <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.jpg">
