--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -14,8 +14,8 @@
   <link rel="apple-touch-icon" sizes="72x72" href="assets/img/apple-touch-icon-72x72.jpg">
   <link rel="apple-touch-icon" sizes="114x114" href="assets/img/apple-touch-icon-114x114.jpg">
 
-  <link href='http://fonts.googleapis.com/css?family=Ubuntu:700' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Ubuntu:700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,700' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" type="text/css" media="all" />
   <link rel="stylesheet" href="assets/css/animate.css" type="text/css" media="all" />
@@ -50,6 +50,12 @@
       <!--<![endif]-->
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAq02fk32G1OgfKrkvlG-0HCcpah39OQr8&callback=initMap"
   type="text/javascript"></script>
+<script>
+var host = "pythonforgood.org"
+if (window.location.host == host && window.location.protocol != "https:") {
+  window.location.protocol = "https:"
+}
+</script>
 
   <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="assets/js/jquery.nav.js"></script>
