Update google map

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -48,8 +48,7 @@
   <!--[if (gte IE 9) | (!IE)]><!-->
           <script type="text/javascript" src="assets/js/jquery-2.1.0.min.js?ver=1"></script>
       <!--<![endif]-->
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAq02fk32G1OgfKrkvlG-0HCcpah39OQr8&callback=initMap"
-  type="text/javascript"></script>
+      <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
 <script>
 var host = "pythonforgood.org"
 if (window.location.host == host && window.location.protocol != "https:") {
