--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -48,9 +48,8 @@
   <!--[if (gte IE 9) | (!IE)]><!-->
           <script type="text/javascript" src="assets/js/jquery-2.1.0.min.js?ver=1"></script>
       <!--<![endif]-->
-      
-      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDM1re_LFtLtfsSQp8tj7P71eLyzAAnH00&callback=initMap"
-      type="text/javascript"></script><script>
+      <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDM1re_LFtLtfsSQp8tj7P71eLyzAAnH00?v=3.exp&amp;sensor=false"></script>
+<script>
 var host = "pythonforgood.org"
 if (window.location.host == host && window.location.protocol != "https:") {
   window.location.protocol = "https:"
