--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -49,6 +49,7 @@
           <script type="text/javascript" src="assets/js/jquery-2.1.0.min.js?ver=1"></script>
       <!--<![endif]-->
       
+      <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
 <script>
 var host = "pythonforgood.org"
 if (window.location.host == host && window.location.protocol != "https:") {
@@ -65,6 +66,6 @@ if (window.location.host == host && window.location.protocol != "https:") {
   <script type="text/javascript" src="assets/js/jquery.fancybox.js"></script>
   <script type="text/javascript" src="assets/mailchimp/js/mailing-list.js"></script>
   <script type="text/javascript" src="assets/js/scripts.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDM1re_LFtLtfsSQp8tj7P71eLyzAAnH00&callback=initMap"></script>
+
 </body>
 </html>
